feat: Add `--version` command

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
   - id: mypy
     name: Run type checks
     args: ["--ignore-missing-imports"]
+    additional_dependencies: ["types-setuptools"]
 - repo: local
   hooks:
   - id: gitchangelog
