--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,8 @@ repos:
 - repo: local
   hooks:
   - id: gitchangelog
-    language: system
+    language: python
+    additional_dependencies: ["gitchangelog"]
     always_run: true
     pass_filenames: false
     name: Generate changelog
