--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
   hooks:
   - id: gitchangelog
     language: python
-    additional_dependencies: ["gitchangelog"]
+    additional_dependencies: ["gitchangelog", "pystache"]
     always_run: true
     pass_filenames: false
     name: Generate changelog
