--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ readme = "README.md"
 sysaidmin = "sysaidmin.cli:cli"
 
 [tool.poetry.dependencies]
-python = ">=3.7.1"
+python = ">=3.8.1"
 openai = "^1.3.5"
+setuptools = "^69.5.1"
 
 [tool.poetry.dev-dependencies]
 
