--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,25 @@
-[tool.poetry]
+[project]
 name = "sysaidmin"
 version = "0.2.2"
 description = "A GPT-powered sysadmin."
-authors = ["Stavros Korokithakis <hi@stavros.io>"]
-repository = "https://github.com/skorokithakis/sysaidmin/"
-license = "AGPL-3.0-or-later"
+authors = [{ name = "Stavros Korokithakis", email = "hi@stavros.io" }]
+requires-python = ">=3.8.1"
 readme = "README.md"
+license = "AGPL-3.0-or-later"
+dependencies = ["openai"]
 
-[tool.poetry.scripts]
+[project.urls]
+Repository = "https://github.com/skorokithakis/sysaidmin/"
+
+[project.scripts]
 sysaidmin = "sysaidmin.cli:cli"
 
-[tool.poetry.dependencies]
-python = ">=3.8.1"
-openai = "^1.3.5"
-
-[tool.poetry.dev-dependencies]
+[dependency-groups]
+dev = []
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
 ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
