feat: Allow using non-OpenAI models

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,38 +1,13 @@
 repos:
-- repo: https://github.com/ambv/black
-  rev: 23.11.0
-  hooks:
-  - id: black
-    name: Reformat files
-- repo: local
-  hooks:
-  - id: no-todos
-    name: Forbid TODOs
-    entry: "TODO"
-    language: pygrep
-    types: [python]
-- repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.12.0
-  hooks:
-  - id: reorder-python-imports
-    name: Reorder imports
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.1.6'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.11.2
   hooks:
     - id: ruff
+      args: ["--select", "I", "--fix"]
+    - id: ruff-format
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.7.1
+  rev: v1.15.0
   hooks:
   - id: mypy
-    name: Run type checks
-    args: ["--ignore-missing-imports"]
-- repo: local
-  hooks:
-  - id: gitchangelog
-    language: python
-    additional_dependencies: ["gitchangelog", "pystache"]
-    always_run: true
-    pass_filenames: false
-    name: Generate changelog
-    entry: bash -c "gitchangelog > CHANGELOG.md"
-    stages: [commit]
+    name: Run MyPy typing checks.
+    args: ["--ignore-missing-imports", "--install-types", "--non-interactive"]
